Edited folder structure for Overheating Toolbox outputs

--- a/examples/testproject/datadriven/notebooks/20_RW_OverheatingToolbox.ipynb
+++ b/examples/testproject/datadriven/notebooks/20_RW_OverheatingToolbox.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'ipyrun._ipyrun'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-9-541c23e68c27>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0msys\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[0msys\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minsert\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'%mf_root%ipyrun\\ipyrun'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 28\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mipyrun\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_ipyrun\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mRunAppMruns\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     29\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     30\u001b[0m \u001b[1;31m# from this repo\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'ipyrun._ipyrun'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "NBFDIR = os.path.dirname(os.path.realpath('__file__'))\n",
@@ -43,9 +31,7 @@
     "from mf_modules.jupyter_formatting import display_python_file\n",
     "from mf_modules.pydtype_operations import read_json, write_json \n",
     "\n",
-    "import sys\n",
-    "sys.path.insert(0,'%mf_root%ipyrun\\ipyrun')\n",
-    "from ipyrun import RunAppMruns\n",
+    "from ipyrun.ipyrun import *\n",
     "\n",
     "# from this repo\n",
     "# this is an unpleasant hack. should aim to find a better solution\n",
@@ -68,20 +54,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "lines_to_next_cell": 2
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'RunAppsMruns' is not defined",
+     "ename": "TypeError",
+     "evalue": "__init__() missing 1 required positional argument: 'fdir_raw_data'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-5-85b9ad938b60>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     55\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     56\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 57\u001b[1;33m     \u001b[0mrunapps\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mRunAppsMruns\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdi\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcreate_config\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfdir_input\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfdir_modelruninput\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfdir_data\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfdir_interim_data\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfdir_analysis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfdir_tm59\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     58\u001b[0m     \u001b[0mcompare_runs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mRunAppComparison\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcompare_config\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     59\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'RunAppsMruns' is not defined"
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-e6c715449bfb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     57\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     58\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 59\u001b[1;33m     \u001b[0mrunapps\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mRunAppsMruns\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdi\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcreate_config\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfdir_input\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfdir_modelruninput\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfdir_data\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfdir_graphs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfdir_analysis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfdir_tm59\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     60\u001b[0m     \u001b[0mcompare_runs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mRunAppComparison\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcompare_config\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     61\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: __init__() missing 1 required positional argument: 'fdir_raw_data'"
      ]
     }
    ],
@@ -122,8 +108,10 @@
     "    # Compare Model Run Outputs\n",
     "    fdir_interim_data = os.path.join(fdir_data,r'interim')\n",
     "    fdir_processed_data = os.path.join(fdir_data,r'processed')\n",
-    "\n",
-    "    fdir_tm59 = os.path.join(fdir_processed_data, r'tm59')\n",
+    "    \n",
+    "    fdir_graphs = os.path.join(fdir_interim_data,r'graphs')\n",
+    "    fdir_tm59 = os.path.join(fdir_interim_data, r'TM59')\n",
+    "    \n",
     "    fpth_comp_script = os.path.join(fdir_scripts, r'compare_model_run_file.py')\n",
     "    fdir_comp_out = os.path.join(fdir_processed_data, r'datacomparison')\n",
     "\n",
@@ -142,27 +130,20 @@
     "    }    \n",
     "\n",
     "\n",
-    "    runapps = RunAppsMruns(di=create_config, fdir_input=fdir_modelruninput, fdir_data=fdir_interim_data, fdir_analysis=fdir_tm59)  \n",
+    "    runapps = RunAppsMruns(di=create_config, fdir_input=fdir_modelruninput, fdir_data=fdir_graphs, fdir_analysis=fdir_tm59)  \n",
     "    compare_runs = RunAppComparison(compare_config)  \n",
     "\n",
     "    # Display Model Runs\n",
-    "    display(Markdown('### Overheating Analysis - Toolbox'))\n",
+    "    display(Markdown('# Overheating Analysis - Toolbox'))\n",
     "    display(Markdown('---'))\n",
-    "    display(Markdown('##### Step 1: Setup Inputs and Run Models'))\n",
+    "    display(Markdown('## Setup Inputs and Run Models'))\n",
     "    display(Markdown('''Setup runs, and their inputs. Then, multiple runs can be analysed.'''))\n",
     "    display(runapps, display_id=True)\n",
     "    display(Markdown('---'))\n",
-    "    display(Markdown('##### Step 2: Compare Runs'))\n",
+    "    display(Markdown('## Compare Runs'))\n",
     "    display(Markdown('''Choose multiple runs, which can be compared'''))\n",
     "    display(compare_runs)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
