--- a/ipyrun/ipyrun.ipynb
+++ b/ipyrun/ipyrun.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,6 @@
     "        tmp['fpth_inputs'] = fpth_input\n",
     "        tmp['fdir_inputs'] = self.fdir_input\n",
     "        tmp.update({'process_name':process_name})\n",
-    "        \n",
     "        return {'app':RunApp,'config':tmp}\n",
     "\n",
     "    def _update_configs(self):\n",
@@ -194,7 +193,7 @@
     "            display(self.add_run_btn)\n",
     "    \n",
     "    def _run_add_run(self,sender):\n",
-    "        \n",
+    "\n",
     "        # Pull selected process from dropdown\n",
     "        dd_val = self.add_run_dd.value\n",
     "        dd_split = str(self.add_run_dd.value).split('_')\n",
@@ -364,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -447,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -615,7 +614,7 @@
     "            if len(fpths)==0:\n",
     "                display(Markdown('select the file(s) that you would like to display from the \"outputs\" list above '))\n",
     "            else:\n",
-    "                display(DisplayFiles(fpths, fpths_ignore=display_ignore))\n",
+    "                display(DisplayFiles(fpths, fpths_ignore=display_ignore, fpth_prefix=self.config['pretty_name']))\n",
     "                \n",
     "    def _show_log(self, sender):\n",
     "        with self.out:\n",
@@ -770,14 +769,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "class RunAppsMruns():\n",
     "    # Archived version of RunAppsMruns,\n",
     "    # with inline compare files function\n",
-    "    def __init__(self, di, fdir_input, fdir_data, fdir_analysis):\n",
+    "    def __init__(self, di, fdir_input, fdir_data, fdir_analysis, fdir_raw_data):\n",
     "        \"\"\"\n",
     "        Args:\n",
     "            di (object): list of RunApp input configs. \n",
@@ -794,6 +793,7 @@
     "        self.fdir_input = os.path.join(di_config['fdir_inputs'], r'modelruninputs')\n",
     "        self.fdir_data = fdir_data\n",
     "        self.fdir_analysis = fdir_analysis\n",
+    "        self.fdir_raw_data = fdir_raw_data\n",
     "        \n",
     "        if not os.path.exists(self.fdir_input):\n",
     "            os.makedirs(self.fdir_input)\n",
@@ -824,11 +824,13 @@
     "    def _create_process(self, process_name, di):\n",
     "        tmp = copy.deepcopy(di)\n",
     "        fpth_input = os.path.join(self.fdir_input, process_name + '.json')\n",
-    "        tmp['script_outputs']['0']['fnm'] = os.path.join(self.fdir_data, process_name)\n",
+    "        tmp['script_outputs']['0']['fnm'] = os.path.realpath(self.fdir_data)\n",
     "        tmp['script_outputs']['1']['fnm'] = os.path.realpath(self.fdir_analysis)\n",
+    "        tmp['script_outputs']['2']['fnm'] = os.path.realpath(self.fdir_raw_data)\n",
     "        tmp['fpth_inputs'] = fpth_input\n",
     "        tmp['fdir_inputs'] = self.fdir_input\n",
     "        tmp.update({'process_name':process_name})\n",
+    "        tmp.update({'pretty_name':process_name})\n",
     "        \n",
     "        return {'app':RunApp,'config':tmp}\n",
     "\n",
@@ -1057,8 +1059,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 25,
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
    "outputs": [
     {
      "data": {
@@ -1087,7 +1091,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c70010c3e06e41529c54133d8ec13da9",
+       "model_id": "84c47260c4064f9b93357a6a9d68536f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1101,7 +1105,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1c2ec41499764bab816b3dfde1ce8f38",
+       "model_id": "e380149180374e64a072ac44ecba1452",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1148,7 +1152,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a5946516f3c045c6bcf7255257e9244c",
+       "model_id": "8bb13feca15944d08ee3d55139a91e2e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1162,7 +1166,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3ea748bc251948ae927154334a2fe46e",
+       "model_id": "96230e49aa4546caae7029e2cae6f855",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1252,7 +1256,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5a879ccb5a9f4148a844405cde75d35f",
+       "model_id": "374f0706fe824369bc0233b469ccd98b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1266,7 +1270,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2ae0c8c297bf4d63bdd69da5ec7c192f",
+       "model_id": "5c0fac5bc5aa4af899ce3ac9206f4625",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1280,7 +1284,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e02465f82d9641b0a9507488c393e32b",
+       "model_id": "5f2e65255b1f46e7ad5bbdebea543c08",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1294,7 +1298,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2e2e2c9eddb441e0a6c0534e82682d14",
+       "model_id": "637357a728664ab4916a6da46152f144",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1308,7 +1312,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "762cfeac341b41d5b3a5aff4866be4ec",
+       "model_id": "fd6216c3c741431fb44f9ff1bb664fd6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1322,7 +1326,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "842f347d5cb94394add25efe54521b12",
+       "model_id": "94b0cf7106bd45639bffd1cd1c7903d2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1336,7 +1340,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "61c6e5e5ab8440c4b3a5bc5630740c11",
+       "model_id": "a4f111af2f3a4841aa3f72f2e4a95be8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1350,7 +1354,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "686c85e0c924412e971c7af521034237",
+       "model_id": "fa6232b65dd2490aa3bad07f0f644843",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1439,7 +1443,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7287ee8f825446c7adeaebb074faeedf",
+       "model_id": "0fccc814b691426eb01401795a4c8d98",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1453,7 +1457,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7412ab2b11b14510921d30a5c8054467",
+       "model_id": "84b8a889a336445fbdb4148a24261493",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1467,7 +1471,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4bd1e3780ab442da9800e6639f6dacd0",
+       "model_id": "ed8fdda6ca5445c090cfce96c2eaa945",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1481,7 +1485,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2ab5e0446cc646da9a928c35481dd3bf",
+       "model_id": "334ef8aaae304bf69b1f79ae2536ab4b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1495,7 +1499,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14a41275bfb7421d83d93e9193546287",
+       "model_id": "0ac97159254e46aabd0fe86eb3636e79",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1509,7 +1513,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ecb6b8d6e5384b4981f003836f7994b0",
+       "model_id": "aa6b299a3e2845dbb048c7e9650f5b1c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1523,7 +1527,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "10e1a3c984d54064bed3c2fd261ca65c",
+       "model_id": "6d25c58d70824c88a6925900c64e6204",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1537,7 +1541,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "92f2dd97bf4141939e7202f235b9bb88",
+       "model_id": "d1e2e16c19964693a7d44e52cc66d7ef",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1573,7 +1577,7 @@
     {
      "data": {
       "text/markdown": [
-       "### Example6"
+       "# Overheating Analysis - Toolbox"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -1585,7 +1589,31 @@
     {
      "data": {
       "text/markdown": [
-       "Batch Run of RunApps, for ModelRun"
+       "---"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "## Setup Inputs and Run Models"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "Setup runs, and their inputs. Then, multiple runs can be analysed."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -1597,7 +1625,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0bdee891306045ceafa6dc66d342234f",
+       "model_id": "912c191075e54df8b3c946e0d585601b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1611,7 +1639,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2e73906ea5514c0583e353c3a0f536bd",
+       "model_id": "52f57226462f447284d214a69c911bc2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1625,7 +1653,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "25363857a1d74185a3e4eeaa630da516",
+       "model_id": "86c5ef3a15d54a29816063f60496c1ae",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1639,7 +1667,31 @@
     {
      "data": {
       "text/markdown": [
-       "Compare Runs"
+       "---"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "## Compare Runs"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "Choose multiple runs, which can be compared"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -1651,7 +1703,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9e7a06abf2b8409fac827bee1ede6b29",
+       "model_id": "8f3e1a18bbea43b3bccda8e8b1357c24",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1665,24 +1717,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9baf6789704346c69979a7d6aa8ef1ff",
+       "model_id": "3e7dbf452c84495dad9a6a48f10ae544",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "---"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
       ]
      },
      "metadata": {},
@@ -1882,8 +1922,7 @@
     "    r\n",
     "\n",
     "\n",
-    "\n",
-    "    # Example6 --------------------------\n",
+    "        # Example6 --------------------------\n",
     "    # Set of RunApps and comparison tools, for ModelRun\n",
     "\n",
     "    # Parameters\n",
@@ -1891,6 +1930,7 @@
     "    fdir_data = os.path.join(os.environ['mf_root'],r'ipyrun\\examples\\testproject\\datadriven\\data')\n",
     "    fdir_scripts = os.path.join(os.environ['mf_root'],r'ipyrun\\examples\\testproject\\datadriven\\src')\n",
     "    display_ignore = ['.jpg','.jpeg','.png','.xlsx']\n",
+    "    \n",
     "    # Create Model Run Outputs\n",
     "    fpth_create_script = os.path.join(fdir_scripts,r'create_model_run_file.py')\n",
     "\n",
@@ -1908,6 +1948,11 @@
     "                'fdir':'.', # relative to the location of the App / Notebook file\n",
     "                'fnm': r'.',\n",
     "                'description': \"Folder for analysis output\"\n",
+    "            },\n",
+    "            '2': {\n",
+    "                'fdir':'.', # relative to the location of the App / Notebook file\n",
+    "                'fnm': r'.',\n",
+    "                'description': \"Folder for raw data\"\n",
     "            }\n",
     "        }\n",
     "    } \n",
@@ -1915,8 +1960,11 @@
     "    # Compare Model Run Outputs\n",
     "    fdir_interim_data = os.path.join(fdir_data,r'interim')\n",
     "    fdir_processed_data = os.path.join(fdir_data,r'processed')\n",
-    "\n",
-    "    fdir_tm59 = os.path.join(fdir_processed_data, r'tm59')\n",
+    "    fdir_raw_data = os.path.join(fdir_data,r'raw')\n",
+    "    \n",
+    "    fdir_graphs = os.path.join(fdir_interim_data,r'graphs')\n",
+    "    fdir_tm59 = os.path.join(fdir_interim_data, r'TM59')\n",
+    "    \n",
     "    fpth_comp_script = os.path.join(fdir_scripts, r'compare_model_run_file.py')\n",
     "    fdir_comp_out = os.path.join(fdir_processed_data, r'datacomparison')\n",
     "\n",
@@ -1934,24 +1982,21 @@
     "        'fdir_compareinputs': fdir_interim_data\n",
     "    }    \n",
     "\n",
-    "    runapps = RunAppsMruns(di=create_config, fdir_input=fdir_modelruninput, fdir_data=fdir_interim_data, fdir_analysis=fdir_tm59)  \n",
+    "\n",
+    "    runapps = RunAppsMruns(di=create_config, fdir_input=fdir_modelruninput, fdir_data=fdir_graphs, fdir_analysis=fdir_tm59, fdir_raw_data=fdir_raw_data)  \n",
     "    compare_runs = RunAppComparison(compare_config)  \n",
     "\n",
     "    # Display Model Runs\n",
-    "    display(Markdown('### Example6'))\n",
-    "    display(Markdown('''Batch Run of RunApps, for ModelRun'''))\n",
+    "    display(Markdown('# Overheating Analysis - Toolbox'))\n",
+    "    display(Markdown('---'))\n",
+    "    display(Markdown('## Setup Inputs and Run Models'))\n",
+    "    display(Markdown('''Setup runs, and their inputs. Then, multiple runs can be analysed.'''))\n",
     "    display(runapps, display_id=True)\n",
-    "    display(Markdown('Compare Runs'))\n",
-    "    display(compare_runs)\n",
-    "    display(Markdown('---'))"
+    "    display(Markdown('---'))\n",
+    "    display(Markdown('## Compare Runs'))\n",
+    "    display(Markdown('''Choose multiple runs, which can be compared'''))\n",
+    "    display(compare_runs)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
