--- a/examples/testproject/datadriven/notebooks/20_RW_OverheatingToolbox.ipynb
+++ b/examples/testproject/datadriven/notebooks/20_RW_OverheatingToolbox.ipynb
@@ -60,37 +60,242 @@
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "__init__() missing 1 required positional argument: 'fdir_raw_data'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-e6c715449bfb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     57\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     58\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 59\u001b[1;33m     \u001b[0mrunapps\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mRunAppsMruns\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdi\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcreate_config\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfdir_input\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfdir_modelruninput\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfdir_data\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfdir_graphs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfdir_analysis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfdir_tm59\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     60\u001b[0m     \u001b[0mcompare_runs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mRunAppComparison\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcompare_config\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     61\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: __init__() missing 1 required positional argument: 'fdir_raw_data'"
-     ]
+     "data": {
+      "text/markdown": [
+       "# Overheating Analysis - Toolbox"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "---"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "## Setup Inputs and Run Models"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "Setup runs, and their inputs. Then, multiple runs can be analysed."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dad4722dcd7b45e7ab1768f5ba075d8e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Button(icon='eye-slash', layout=Layout(width='5%'), style=ButtonStyle(font_weight='bold'), tool…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "faf96ba117424409acb84dba5bb89754",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d576391c917143359e871356ebe86b1f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(VBox(children=(HBox(children=(Checkbox(value=False, indent=False, layout=Layout(height='30px', …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "---"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "## Compare Runs"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "Choose multiple runs, which can be compared"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "556184db3189499c8825b2736209defd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Checkbox(value=False, indent=False, layout=Layout(height='30px', max_width='30px', padding='3px…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d9fd6a6ee92f4004bb7b4c33bbd8094b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "---"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "## Report Runs"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "Create a report"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8b14783ca97c4da7a99b6d0e6867a725",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Checkbox(value=False, indent=False, layout=Layout(height='30px', max_width='30px', padding='3px…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "be06ecc1317740f0b2ead208018f3ec8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "if __name__ == '__main__':\n",
     "\n",
-    "\n",
-    "    # Example6 --------------------------\n",
-    "    # Set of RunApps and comparison tools, for ModelRun\n",
-    "\n",
     "    # Parameters\n",
-    "    fdir_modelruninput = os.path.join(os.environ['mf_root'],r'ipyrun\\examples\\testproject\\05 Model Files') \n",
-    "    fdir_data = os.path.join(os.environ['mf_root'],r'ipyrun\\examples\\testproject\\datadriven\\data')\n",
-    "    fdir_scripts = os.path.join(os.environ['mf_root'],r'ipyrun\\examples\\testproject\\datadriven\\src')\n",
-    "    display_ignore = ['.jpg','.jpeg','.png','.xlsx']\n",
-    "    \n",
+    "    parameters = {}\n",
+    "    parameters['fdir_modelruninput'] = r'../../05 Model Files'\n",
+    "    parameters['fdir_data'] = r'../data'\n",
+    "    parameters['fdir_scripts'] = r'../src'\n",
+    "    parameters['fdir_reports'] = r'../reports'\n",
+    "    parameters['display_ignore'] = ['.jpg','.jpeg','.png','.xlsx']\n",
+    "\n",
     "    # Create Model Run Outputs\n",
-    "    fpth_create_script = os.path.join(fdir_scripts,r'create_model_run_file.py')\n",
+    "    parameters['fpth_create_script'] = os.path.join(parameters['fdir_scripts'],r'create_model_run_file.py')\n",
     "\n",
     "    create_config = {\n",
-    "        'fpth_script':os.path.realpath(fpth_create_script),\n",
-    "        'fdir':os.path.join(fdir_scripts),\n",
-    "        'display_ignore':display_ignore,\n",
+    "        'fpth_script':os.path.realpath(parameters['fpth_create_script']),\n",
+    "        'fdir':os.path.realpath(parameters['fdir_scripts']),\n",
+    "        'display_ignore':parameters['display_ignore'],\n",
     "        \"script_outputs\": {\n",
     "            '0': {\n",
     "                'fdir':'.', # relative to the location of the App / Notebook file\n",
@@ -101,37 +306,63 @@
     "                'fdir':'.', # relative to the location of the App / Notebook file\n",
     "                'fnm': r'.',\n",
     "                'description': \"Folder for analysis output\"\n",
+    "            },\n",
+    "            '2': {\n",
+    "                'fdir':'.', # relative to the location of the App / Notebook file\n",
+    "                'fnm': r'.',\n",
+    "                'description': \"Folder for raw data\"\n",
     "            }\n",
     "        }\n",
     "    } \n",
     "\n",
     "    # Compare Model Run Outputs\n",
-    "    fdir_interim_data = os.path.join(fdir_data,r'interim')\n",
-    "    fdir_processed_data = os.path.join(fdir_data,r'processed')\n",
+    "    parameters['fdir_interim_data'] = os.path.join(parameters['fdir_data'],r'interim')\n",
+    "    parameters['fdir_processed_data'] = os.path.join(parameters['fdir_data'],r'processed')\n",
+    "    parameters['fdir_raw_data'] = os.path.join(parameters['fdir_data'],r'raw')\n",
+    "\n",
     "    \n",
-    "    fdir_graphs = os.path.join(fdir_interim_data,r'graphs')\n",
-    "    fdir_tm59 = os.path.join(fdir_interim_data, r'TM59')\n",
+    "    parameters['fdir_tm59_interim'] = os.path.join(parameters['fdir_interim_data'], r'TM59')\n",
+    "    parameters['fdir_graphs_interim'] = os.path.join(parameters['fdir_tm59_interim'], r'graphs')\n",
     "    \n",
-    "    fpth_comp_script = os.path.join(fdir_scripts, r'compare_model_run_file.py')\n",
-    "    fdir_comp_out = os.path.join(fdir_processed_data, r'datacomparison')\n",
+    "    parameters['fpth_comp_script'] = os.path.join(parameters['fdir_scripts'], r'compare_model_run_file.py')\n",
+    "    parameters['fdir_comp_out'] = os.path.join(parameters['fdir_processed_data'], r'TM59')\n",
+    "\n",
+    "    parameters['fpth_report_script'] = os.path.join(parameters['fdir_scripts'], r'report_model_run_file.py')\n",
     "\n",
     "    compare_config = {\n",
-    "        'fpth_script':os.path.realpath(fpth_comp_script),\n",
-    "        'fdir':fdir_scripts,\n",
-    "        'display_ignore':display_ignore,\n",
+    "        'fpth_script':os.path.realpath(parameters['fpth_comp_script']),\n",
+    "        'fdir':parameters['fdir_scripts'],\n",
+    "        'display_ignore':parameters['display_ignore'],\n",
     "        'script_outputs': {\n",
     "            '0': {\n",
-    "                    'fdir':os.path.realpath(fdir_comp_out),\n",
+    "                    'fdir':os.path.realpath(parameters['fdir_comp_out']),\n",
     "                    'fnm': '',\n",
-    "                    'description': \"a pdf report from word\"\n",
+    "                    'description': \"Folder for comparison graphs\"\n",
     "            }\n",
     "        },\n",
-    "        'fdir_compareinputs': fdir_interim_data\n",
-    "    }    \n",
+    "        'fdir_compareinputs': parameters['fdir_graphs_interim']\n",
+    "    }\n",
     "\n",
-    "\n",
-    "    runapps = RunAppsMruns(di=create_config, fdir_input=fdir_modelruninput, fdir_data=fdir_graphs, fdir_analysis=fdir_tm59)  \n",
+    "    runapps = RunAppsMruns(di=create_config, fdir_input=parameters['fdir_modelruninput'], fdir_data=parameters['fdir_graphs_interim'], fdir_analysis=parameters['fdir_tm59_interim'], fdir_raw_data=parameters['fdir_raw_data'])  \n",
     "    compare_runs = RunAppComparison(compare_config)  \n",
+    "    parameters['fdir_inputs'] = os.path.relpath(runapps.fdir_input, NBFDIR)\n",
+    "    \n",
+    "    reporting_config = {\n",
+    "        'fpth_script':os.path.realpath(parameters['fpth_report_script']),\n",
+    "        'fdir':parameters['fdir_scripts'],\n",
+    "        'script_outputs': {\n",
+    "            '0': {\n",
+    "                    'fdir':parameters['fdir_reports'],\n",
+    "                    'fnm': '',\n",
+    "                    'description': \"A markdown report\"\n",
+    "            }\n",
+    "        },\n",
+    "        'fpth_parameters': parameters,\n",
+    "        'compare_run_inputs': compare_config['fpth_inputs']\n",
+    "    }\n",
+    "\n",
+    "    report_run = RunApp(reporting_config)  \n",
+    "    \n",
     "\n",
     "    # Display Model Runs\n",
     "    display(Markdown('# Overheating Analysis - Toolbox'))\n",
@@ -142,12 +373,17 @@
     "    display(Markdown('---'))\n",
     "    display(Markdown('## Compare Runs'))\n",
     "    display(Markdown('''Choose multiple runs, which can be compared'''))\n",
-    "    display(compare_runs)"
+    "    display(compare_runs)\n",
+    "    display(Markdown('---'))\n",
+    "    display(Markdown('## Report Runs'))\n",
+    "    display(Markdown('''Create a report'''))\n",
+    "    display(report_run)"
    ]
   }
  ],
  "metadata": {
   "jupytext": {
+   "encoding": "# -*- coding: utf-8 -*-",
    "formats": "ipynb,py:light"
   },
   "kernelspec": {
