--- a/ipyrun/_ipyeditcsv.ipynb
+++ b/ipyrun/_ipyeditcsv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ShowHideEditCsv():\n",
+    "    \"\"\"NOTE IN USE\"\"\"\n",
+    "    def __init__(self, fpth_in, fpth_out=None, title=None):\n",
+    "        self.fpth_in = fpth_in\n",
+    "        if fpth_out==None:\n",
+    "            self.fpth_out = fpth_in\n",
+    "        else:\n",
+    "            self.fpth_out = fpth_out\n",
+    "        if title==None:\n",
+    "            self.title = 'edit: {0}'.format(self.fpth_out)\n",
+    "        else:\n",
+    "            self.title = title\n",
+    "        self.sheet = self._sheet_from_fpth(self.fpth_in)\n",
+    "        self.form()\n",
+    "        self._init_controls()\n",
+    "        self.out = widgets.Output()\n",
+    "        \n",
+    "    def form(self):\n",
+    "        self.save_changes = widgets.Button(description='save changes',button_style='success')\n",
+    "        self.button_bar = widgets.HBox([self.save_changes])\n",
+    "        self.layout = self.sheet\n",
+    "        self.box = widgets.VBox([self.button_bar,self.layout])\n",
+    "        self.acc = widgets.Accordion(children=[self.box])\n",
+    "        self.acc.set_title(0,self.title)\n",
+    "        self.acc.selected_index = None\n",
+    "        \n",
+    "    def _init_controls(self):\n",
+    "        self.save_changes.on_click(self._save_changes)\n",
+    "        \n",
+    "    def _sheet_from_fpth(self, fpth):\n",
+    "        df=del_matching(pd.read_csv(fpth),'Unnamed')\n",
+    "        sheet = ipysheet.sheet(ipysheet.from_dataframe(df)) # initiate sheet\n",
+    "        return sheet\n",
+    "    \n",
+    "    def _save_changes(self, sender):\n",
+    "        self.data_out = to_dataframe(self.sheet)\n",
+    "        self.data_out.to_csv(self.fpth_out)\n",
+    "        display(Markdown('changes saved to: {0}'.format(self.fpth_out)))\n",
+    "        with self.out:\n",
+    "            clear_output()\n",
+    "            dateTimeObj = datetime.now()\n",
+    "            timestampStr = dateTimeObj.strftime(\"%d-%b-%Y %H:%M:%S:\")\n",
+    "            display(Markdown('{0} changes saved to: {1}'.format(timestampStr,self.fpth_out)))\n",
+    "        self.display()\n",
+    "\n",
+    "    def display(self):\n",
+    "        display(self.acc)\n",
+    "        \n",
+    "    def _ipython_display_(self):\n",
+    "        self.display() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {
     "lines_to_end_of_cell_marker": 2
    },
@@ -168,35 +226,6 @@
     "        self.update_display()\n",
     "        self.display()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if __name__ == \"__main__\":\n",
-    "    # SIMPLE EDIT CSV\n",
-    "    #fpth = os.path.join(os.environ['mf_root'],r'MF_Toolbox\\dev\\mf_scripts\\configs\\eplus_pipework_params.csv')\n",
-    "    #editcsv = SimpleEditCsv(fpth)\n",
-    "    #display(editcsv)\n",
-    "    \n",
-    "    \n",
-    "    # EDIT CSV with custom config and file management\n",
-    "    config={\n",
-    "    'fpth_script':os.path.join(os.environ['mf_root'],r'MF_Toolbox\\dev\\mf_scripts\\eplus_pipework_params.py'),\n",
-    "    'fdir':'.',\n",
-    "    }\n",
-    "    editcsv = EditCsv(config)\n",
-    "    display(editcsv)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
