Added Compare Inputs to Overheating Toolbox

--- a/ipyrun/_ipydisplayfile.ipynb
+++ b/ipyrun/_ipydisplayfile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,8 +312,8 @@
     "                if not os.path.basename(fpth).startswith(fpth_prefix):\n",
     "                    self.fpths.remove(fpth)\n",
     "                    \n",
-    "        self.fpths = list(set(self.fpths)).sort()\n",
-    "        self.fnms = [os.path.basename(fpth) for fpth in self.fpths];\n",
+    "        self.fpths = sorted(list(set(self.fpths)))\n",
+    "        self.fnms = [os.path.basename(fpth) for fpth in self.fpths]\n",
     "        self._init_previews()\n",
     "        self._init_form()\n",
     "        self._init_controls()\n",
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {
     "lines_to_end_of_cell_marker": 2,
     "lines_to_next_cell": 0
@@ -398,7 +398,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "89c71297a5274675b1ee70902fa023b6",
+       "model_id": "6322c10abc4d4864844243f9848814d9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -467,7 +467,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6f7c14ca0f0449a6aec537497910f95e",
+       "model_id": "378112439b0b4c6185a5322a52b9e6e4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -481,12 +481,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5cb7e8da8bb94ddd9ed37be36e1ed3f8",
+       "model_id": "ef6893bcc1e34f238f742d2c86aed2ad",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "SelectMultiple(layout=Layout(flex_flow='column', height='auto', width='auto'), options=('eg_csv.csv', 'eg_docx…"
+       "SelectMultiple(layout=Layout(flex_flow='column', height='auto', width='auto'), options=('eg_YAML.YAML', 'eg_cs…"
       ]
      },
      "metadata": {},
@@ -495,7 +495,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9ecb6a2e39bf42dbae44a2583c388861",
+       "model_id": "52428a008a324abda2edb56b7475f84e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -555,7 +555,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1427e9ad62f542f28eabd34e3df18154",
+       "model_id": "486612d7384948679e095fb392dc2c3c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -569,7 +569,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "85f97bf2e72b43109a911da25f3eb6b6",
+       "model_id": "7d24da3069414c1a844f25d5ed07271b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -583,7 +583,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "841589e19edc4a6faeef6e7d6c708a2b",
+       "model_id": "5b8843f403394161b0b45197c753fff6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -597,7 +597,7 @@
     {
      "data": {
       "text/markdown": [
-       "### Example3"
+       "### Example4"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -609,7 +609,7 @@
     {
      "data": {
       "text/markdown": [
-       "display eg directory"
+       "example, with fpths_ignore and fpth_prefix"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -621,7 +621,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "09d2ef1cf5544633bd68d695c3143152",
+       "model_id": "0fe1537ceecc47b9b1fdbcf7e89f7be6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -635,7 +635,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "67d6f82ffb7644a5a495bbdfdf45e4ab",
+       "model_id": "2ad8d0148d8a409ab978c6e16071057b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -649,7 +649,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "baa3ce8285634863b787b3a9a0eedc60",
+       "model_id": "ae8b9c13bc8c4a72b585590779c66bb5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -714,36 +714,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
    "outputs": [],
    "source": []
   }
