--- a/examples/testproject/datadriven/notebooks/20_RW_OverheatingToolbox.ipynb
+++ b/examples/testproject/datadriven/notebooks/20_RW_OverheatingToolbox.ipynb
@@ -110,7 +110,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dad4722dcd7b45e7ab1768f5ba075d8e",
+       "model_id": "600cb626d20144d29892518c69a16817",
        "version_major": 2,
        "version_minor": 0
       },
@@ -124,7 +124,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "faf96ba117424409acb84dba5bb89754",
+       "model_id": "6d135eec762e4dfdadb660a6e40304f0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -138,7 +138,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d576391c917143359e871356ebe86b1f",
+       "model_id": "8f4f735f04c8484795fb06122493e9eb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -188,7 +188,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "556184db3189499c8825b2736209defd",
+       "model_id": "6ce482bcbabb4270a262e0fc7a655dcd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -202,7 +202,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d9fd6a6ee92f4004bb7b4c33bbd8094b",
+       "model_id": "6025babd3ede482782e495b714ec8a9d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -252,7 +252,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8b14783ca97c4da7a99b6d0e6867a725",
+       "model_id": "35ed62e44e6f49e98c787c8223096c70",
        "version_major": 2,
        "version_minor": 0
       },
@@ -266,7 +266,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "be06ecc1317740f0b2ead208018f3ec8",
+       "model_id": "5da483dd216549f7b2f35937add8a12b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -281,19 +281,26 @@
    "source": [
     "if __name__ == '__main__':\n",
     "\n",
-    "    # Parameters\n",
+    "    # Create set of parameters\n",
     "    parameters = {}\n",
-    "    parameters['fdir_modelruninput'] = r'../../05 Model Files'\n",
+    "    analysis = r'TM59'\n",
+    "    parameters['fdir_modelruninput'] = r'../05 Model Files'\n",
     "    parameters['fdir_data'] = r'../data'\n",
     "    parameters['fdir_scripts'] = r'../src'\n",
     "    parameters['fdir_reports'] = r'../reports'\n",
     "    parameters['display_ignore'] = ['.jpg','.jpeg','.png','.xlsx']\n",
+    "    parameters['fdir_interim_data'] = os.path.join(parameters['fdir_data'],r'interim')\n",
+    "    parameters['fdir_processed_data'] = os.path.join(parameters['fdir_data'],r'processed')\n",
+    "    parameters['fdir_raw_data'] = os.path.join(parameters['fdir_data'],r'raw', analysis)\n",
+    "    parameters['fdir_analysis_interim'] = os.path.join(parameters['fdir_interim_data'], analysis)\n",
+    "    parameters['fdir_graphs_interim'] = os.path.join(parameters['fdir_analysis_interim'], r'graphs')\n",
+    "    parameters['fdir_analysis_processed'] = os.path.join(parameters['fdir_processed_data'], analysis)\n",
+    "    parameters['fpth_comp_script'] = os.path.join(parameters['fdir_scripts'], r'compare_model_run_file.py')\n",
+    "    parameters['fpth_report_script'] = os.path.join(parameters['fdir_scripts'], r'report_model_run_file.py')\n",
+    "    parameters['fpth_setup_script'] = os.path.join(parameters['fdir_scripts'],r'setup_model_run_file.py')\n",
     "\n",
-    "    # Create Model Run Outputs\n",
-    "    parameters['fpth_create_script'] = os.path.join(parameters['fdir_scripts'],r'create_model_run_file.py')\n",
-    "\n",
-    "    create_config = {\n",
-    "        'fpth_script':os.path.realpath(parameters['fpth_create_script']),\n",
+    "    setup_config = {\n",
+    "        'fpth_script':os.path.realpath(parameters['fpth_setup_script']),\n",
     "        'fdir':os.path.realpath(parameters['fdir_scripts']),\n",
     "        'display_ignore':parameters['display_ignore'],\n",
     "        \"script_outputs\": {\n",
@@ -314,39 +321,31 @@
     "            }\n",
     "        }\n",
     "    } \n",
-    "\n",
-    "    # Compare Model Run Outputs\n",
-    "    parameters['fdir_interim_data'] = os.path.join(parameters['fdir_data'],r'interim')\n",
-    "    parameters['fdir_processed_data'] = os.path.join(parameters['fdir_data'],r'processed')\n",
-    "    parameters['fdir_raw_data'] = os.path.join(parameters['fdir_data'],r'raw')\n",
-    "\n",
+    "    runapps = RunAppsMruns(\n",
+    "                di=setup_config, \n",
+    "                fdir_input=parameters['fdir_modelruninput'], \n",
+    "                fdir_data=parameters['fdir_graphs_interim'], \n",
+    "                fdir_analysis=parameters['fdir_analysis_interim'], \n",
+    "                fdir_raw_data=parameters['fdir_raw_data'])  \n",
     "    \n",
-    "    parameters['fdir_tm59_interim'] = os.path.join(parameters['fdir_interim_data'], r'TM59')\n",
-    "    parameters['fdir_graphs_interim'] = os.path.join(parameters['fdir_tm59_interim'], r'graphs')\n",
-    "    \n",
-    "    parameters['fpth_comp_script'] = os.path.join(parameters['fdir_scripts'], r'compare_model_run_file.py')\n",
-    "    parameters['fdir_comp_out'] = os.path.join(parameters['fdir_processed_data'], r'TM59')\n",
-    "\n",
-    "    parameters['fpth_report_script'] = os.path.join(parameters['fdir_scripts'], r'report_model_run_file.py')\n",
-    "\n",
     "    compare_config = {\n",
     "        'fpth_script':os.path.realpath(parameters['fpth_comp_script']),\n",
     "        'fdir':parameters['fdir_scripts'],\n",
     "        'display_ignore':parameters['display_ignore'],\n",
     "        'script_outputs': {\n",
     "            '0': {\n",
-    "                    'fdir':os.path.realpath(parameters['fdir_comp_out']),\n",
+    "                    'fdir':os.path.realpath(parameters['fdir_analysis_processed']),\n",
     "                    'fnm': '',\n",
     "                    'description': \"Folder for comparison graphs\"\n",
     "            }\n",
     "        },\n",
     "        'fdir_compareinputs': parameters['fdir_graphs_interim']\n",
     "    }\n",
-    "\n",
-    "    runapps = RunAppsMruns(di=create_config, fdir_input=parameters['fdir_modelruninput'], fdir_data=parameters['fdir_graphs_interim'], fdir_analysis=parameters['fdir_tm59_interim'], fdir_raw_data=parameters['fdir_raw_data'])  \n",
     "    compare_runs = RunAppComparison(compare_config)  \n",
-    "    parameters['fdir_inputs'] = os.path.relpath(runapps.fdir_input, NBFDIR)\n",
     "    \n",
+    "\n",
+    "    parameters['fdir_inputs'] = os.path.relpath(runapps.fdir_input, NBFDIR)\n",
+    "    #parameters['fdir_inputs'] = runapps.fdir_input\n",
     "    reporting_config = {\n",
     "        'fpth_script':os.path.realpath(parameters['fpth_report_script']),\n",
     "        'fdir':parameters['fdir_scripts'],\n",
@@ -358,10 +357,10 @@
     "            }\n",
     "        },\n",
     "        'fpth_parameters': parameters,\n",
-    "        'compare_run_inputs': compare_config['fpth_inputs']\n",
+    "        'compare_run_inputs': compare_config['fpth_inputs'],\n",
+    "        'compare_run_graphs': compare_config['script_outputs']['0']['fdir']\n",
     "    }\n",
-    "\n",
-    "    report_run = RunApp(reporting_config)  \n",
+    "    report_run = RunAppReport(reporting_config)  \n",
     "    \n",
     "\n",
     "    # Display Model Runs\n",
