added sort function so the filepaths appear in order

--- a/ipyrun/_ipydisplayfile.ipynb
+++ b/ipyrun/_ipydisplayfile.ipynb
@@ -312,7 +312,8 @@
     "                if not os.path.basename(fpth).startswith(fpth_prefix):\n",
     "                    self.fpths.remove(fpth)\n",
     "                    \n",
-    "        self.fpths = list(set(self.fpths)).sort()\n",
+    "        self.fpths = list(set(self.fpths))\n",
+    "        self.fpths.sort()\n",
     "        self.fnms = [os.path.basename(fpth) for fpth in self.fpths];\n",
     "        self._init_previews()\n",
     "        self._init_form()\n",
