updated ShowHideEditCsv class to include add and remove row functionality

--- a/ipyrun/_ipyeditcsv.ipynb
+++ b/ipyrun/_ipyeditcsv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,12 +89,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
     "class ShowHideEditCsv():\n",
-    "    \"\"\"NOTE IN USE\"\"\"\n",
+    "    \"\"\"a simple csv editor that allows the user to add and remove rows from the table\"\"\"\n",
     "    def __init__(self, fpth_in, fpth_out=None, title=None):\n",
     "        self.fpth_in = fpth_in\n",
     "        if fpth_out==None:\n",
@@ -112,7 +112,9 @@
     "        \n",
     "    def form(self):\n",
     "        self.save_changes = widgets.Button(description='save changes',button_style='success')\n",
-    "        self.button_bar = widgets.HBox([self.save_changes])\n",
+    "        self.add_row = widgets.Button(description='add row',button_style='info')\n",
+    "        self.remove_row = widgets.Button(description='remove row',button_style='danger')\n",
+    "        self.button_bar = widgets.HBox([self.save_changes,self.add_row,self.remove_row])\n",
     "        self.layout = self.sheet\n",
     "        self.box = widgets.VBox([self.button_bar,self.layout])\n",
     "        self.acc = widgets.Accordion(children=[self.box])\n",
@@ -121,6 +123,8 @@
     "        \n",
     "    def _init_controls(self):\n",
     "        self.save_changes.on_click(self._save_changes)\n",
+    "        self.add_row.on_click(self._add_row)\n",
+    "        self.remove_row.on_click(self._remove_row)\n",
     "        \n",
     "    def _sheet_from_fpth(self, fpth):\n",
     "        df=del_matching(pd.read_csv(fpth),'Unnamed')\n",
@@ -137,7 +141,24 @@
     "            timestampStr = dateTimeObj.strftime(\"%d-%b-%Y %H:%M:%S:\")\n",
     "            display(Markdown('{0} changes saved to: {1}'.format(timestampStr,self.fpth_out)))\n",
     "        self.display()\n",
-    "\n",
+    "    \n",
+    "    def _add_row(self, sender):\n",
+    "        df = to_dataframe(self.sheet)\n",
+    "        df = df.append(pd.DataFrame({c:[''] for c in list(df)}), ignore_index=True)\n",
+    "        self.sheet = from_dataframe(df)\n",
+    "        self.layout = self.sheet\n",
+    "        self.box.children = [widgets.VBox([self.button_bar,self.layout])]\n",
+    "        self.display()\n",
+    "        \n",
+    "    def _remove_row(self, sender):\n",
+    "        df = to_dataframe(self.sheet)\n",
+    "        ind = df.index.tolist()[:-1] # get a list of indexes drpping the last one\n",
+    "        df = df.loc[ind]\n",
+    "        self.sheet = from_dataframe(df)\n",
+    "        self.layout = self.sheet\n",
+    "        self.box.children = [widgets.VBox([self.button_bar,self.layout])]\n",
+    "        self.display()\n",
+    "        \n",
     "    def display(self):\n",
     "        display(self.acc)\n",
     "        \n",
@@ -147,8 +168,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 24,
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "lines_to_end_of_cell_marker": 2
    },
    "outputs": [],
@@ -225,6 +249,89 @@
     "        self.display_sheet()\n",
     "        self.update_display()\n",
     "        self.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "### Example0"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "ShowHideEditCsv"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "98f4298d42a84e3f83cca6c50f5614b1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Accordion(children=(VBox(children=(HBox(children=(Button(button_style='success', description='save changes', s…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "---"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "if __name__ =='__main__':\n",
+    "\n",
+    "    # FORM ONLY EXAMPLE\n",
+    "    NBFDIR = os.path.dirname(os.path.realpath('__file__'))\n",
+    "    fpth = os.path.realpath(os.path.join(NBFDIR,r'..\\examples\\testcsv\\Ss_65_40_00_00-Ventilation_IndustryStandards.csv'))\n",
+    "    \n",
+    "    #fpth = r'C:\\engDev\\git_mf\\ipyrun\\examples\\notebooks\\appdata\\inputs\\inputs-expansion_vessel_sizing.json'\n",
+    "    a = ShowHideEditCsv(fpth)\n",
+    "    display(Markdown('### Example0'))\n",
+    "    display(Markdown('''ShowHideEditCsv'''))\n",
+    "    display(a)\n",
+    "    display(Markdown('---'))  \n",
+    "    display(Markdown('')) \n",
+    "    "
    ]
   }
  ],
